Fix deployment structure

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,6 +34,8 @@ jobs:
           mkdir -p out/liquid-metal-drbaph
           cp -r out/* out/liquid-metal-drbaph/ || true
           rm -rf out/liquid-metal-drbaph/liquid-metal-drbaph || true
+          mv out/liquid-metal-drbaph/* out/
+          rm -rf out/liquid-metal-drbaph
           touch out/.nojekyll
 
       - name: Deploy to GitHub Pages
